# ai-kanban

./: .env.example  .gitignore  README.md
backend/: .gitignore  Cargo.toml  kanban.db  kanban.db-shm  kanban.db-wal  verify_db.rs
backend/migrations/: 20260214_001_initial.sql  20260215_001_boards_and_files.sql  20260216_001_subtask_phases.sql  20260217_001_board_position.sql  20260218_001_fix_null_board_ids.sql  20260219_001_settings.sql  20260220_001_agent_logs.sql  20260221_001_add_ai_agent.sql  20260222_001_add_card_versions.sql  20260223_001_board_settings.sql  20260224_001_board_settings_github_repo.sql  20260225_001_auth.sql  20260226_001_refresh_tokens.sql  20260227_001_ai_questions.sql  20260228_001_board_settings_concurrency.sql  20260301_001_card_worktree.sql  20260302_001_auto_detect_status.sql  20260303_001_notifications.sql  20260304_001_avatar_and_comment_user.sql  20260305_001_session_mappings.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: routes.rs  state.rs
backend/src/api/dto/: cards.rs
backend/src/api/handlers/: ws.rs  (+13 more)
backend/src/auth/: avatar.rs  cookies.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs  seed.rs
backend/src/domain/: card.rs  error.rs  mod.rs  stage.rs
backend/src/infrastructure/: db.rs
backend/src/mcp/: mod.rs
backend/src/services/: ai_dispatch.rs  card_service.rs  git_worktree.rs  mod.rs  notification_service.rs  opencode_manager.rs  plan_generator.rs  queue_processor.rs  session_mapping.rs  sse_relay.rs
backend/tests/: api_tests.rs  merge_conflict_tests.rs
backend/tests/common/: mod.rs
(+71 files in other folders)
